# git-freq

./: .ghci  .gitignore  .travis.yml  LICENSE  Main.hs  README.md  circle.yml  git-freq.cabal
.github/workflows/: ci.yaml
Git/: Freq.hs
Git/Freq/: Version.hs
src/: Main.hs  Types.hs
src/Git/: Freq.hs  NumStat.hs
src/Git/Freq/: Source.hs  Version.hs
test/: Helper.hs
test/Git/: FreqSpec.hs  NumStatSpec.hs
