name:          git-freq
version:       0.0.3
cabal-version: >=1.10
build-type:    Simple
license:       BSD3
license-file:  LICENSE
maintainer:    Fujimura Daisuke<me@fujimuradaisuke.com>
homepage:      https://github.com/fujimura/git-freq
synopsis:      A Git subcommand to show total addition, deletion per file
description:   A Git subcommand to show total addition, deletion per file
author:        Fujimura Daisuke<me@fujimuradaisuke.com>

source-repository head
  type:     git
  location: git@github.com:fujimura/git-freq.git

executable git-freq
  main-is:          Main.hs
  build-depends:
      base                  >=4 && <5
    , bytestring
    , containers
    , io-streams
    , optparse-applicative
    , process
    , text

  default-language: Haskell2010
  hs-source-dirs:   src
  other-modules:    Git.Freq
  ghc-options:      -Wall -fno-warn-name-shadowing

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:
      base
    , bytestring
    , containers
    , hspec
    , io-streams
    , optparse-applicative
    , process
    , text

  build-tool-depends: hspec-discover:hspec-discover -any
  default-language:   Haskell2010
  hs-source-dirs:     src test
  ghc-options:        -Wall -fno-warn-name-shadowing
