cabal-version: 2.2
name:          git-freq
version:       0.0.3
build-type:    Simple
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    Fujimura Daisuke<me@fujimuradaisuke.com>
homepage:      https://github.com/fujimura/git-freq
synopsis:      A Git subcommand to show total addition, deletion per file
description:   A Git subcommand to show total addition, deletion per file
author:        Fujimura Daisuke<me@fujimuradaisuke.com>

source-repository head
  type:     git
  location: git@github.com:fujimura/git-freq.git

common default
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-name-shadowing

common dependencies
  build-depends:
    , base                  >=4 && <5
    , bytestring
    , containers
    , io-streams
    , optparse-applicative
    , process
    , text

executable git-freq
  import:         dependencies, default
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:
    Git.Freq
    Paths_git_freq

test-suite spec
  import:             dependencies, default
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      hspec
  build-tool-depends: hspec-discover:hspec-discover -any
  hs-source-dirs:     src test
  other-modules:
    Git.Freq
    Git.FreqSpec
    Paths_git_freq
